--- a/css/init.scss
+++ b/css/init.scss
@@ -520,7 +520,7 @@ border-color: #9e4307;
 .experimental, .warning, .note {
 border-left-width: em(4);
 border-left-style: solid;
-margin-bottom: em(5);
+margin-top: em(10);
 padding: em(16);
       
   p {
