--- a/css/init.scss
+++ b/css/init.scss
@@ -341,9 +341,9 @@ width: 100%;
 // Accessibility Patch Page
 
 .bug {
-border: rem(1) #000 solid;
+border: rem(1) #ccc solid;
 margin: em(16) 0;
-padding: em(16) em(32);
+padding: em(16);
 
   dl {
   margin: 0;
