--- a/css/init.scss
+++ b/css/init.scss
@@ -343,7 +343,7 @@ width: 100%;
 .bug {
 border: rem(1) #ccc solid;
 margin: em(16) 0;
-padding: em(16);
+padding: 0 em(16) em(16);
 
   dl {
   margin: 0;
@@ -356,6 +356,10 @@ padding: em(16);
     content: ":";
     }
 
+  }
+
+  &.warning {
+  padding: 0 em(16) em(16);
   }
 
 }
