--- a/css/init.scss
+++ b/css/init.scss
@@ -792,7 +792,7 @@ width: 1px;
 .table-container {
 margin-bottom: em(32);
 overflow-X: auto;
-scrollbar-color: $highlight-color #fff;
+scrollbar-color: $highlight-color;
 scrollbar-gutter: always; 
 -webkit-overflow-scrolling: touch;
 
