--- a/_includes/ui-toc.html
+++ b/_includes/ui-toc.html
@@ -23,7 +23,15 @@
 
       <h2 id="component-library"><a href="/component-library/">Component Library</a></h2>
 
-      <p>A library of modular elements you can combine to create website interfaces.</p>
+      <p>A library of modular components you can combine to create website interfaces.</p>
+
+    </div>
+
+    <div class="carousel-scroll__card">
+
+      <h2 id="magicbullet"><a href="/magicbullet/">MagicBullet</a></h2>
+
+      <p>A script importer to load useful fixes, functionality, and features.</p>
 
     </div>
 
