--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,12 +1,16 @@
 
-<nav aria-label="Primary" id="main-navigation">
-
   <ul>
-      <li><a href="/a11y/" id="nav-a11y">Accessibility at Radancy</a></li>
-      <li><a href="/a11y/baseline/" id="nav-a11y-baseline">Accessibility Testing Baselines</a></li>
-      <li><a href="/component-library/" id="nav-component-library">Component Library</a></li>
-      <li><a href="/uid/photoshop-guidelines/" id="nav-uid-photoshop-guidelines">Photoshop Guidelines</a></li>
-      <li><a href="/uid/code-standards/" id="nav-uid-code-standards">User Interface Standards and Guidelines</a></li>
+      <li><a href="/" data-nav-id="rad-index">Home</a>
+
+        <ul>
+          <li><a href="/a11y/">Accessibility at Radancy</a></li>
+          <li><a href="/component-library/">Component Library</a></li>
+          <li><a href="/magicbullet/">MagicBullet</a></li>
+          <li><a href="/uid/photoshop-guidelines/" data-nav-id="rad-uid-photoshop-guidelines-index">Photoshop Guidelines</a></li>
+          <li><a href="/uid/code-standards/" data-nav-id="rad-uid-code-standards-index">User Interface Standards and Guidelines</a></li>
+        </ul>
+
+      </li>
   </ul>
 
-</nav>
+
