--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,32 @@
 
       <h1 class="primary-heading">{{ page.title }}</h1>
 
+      {% if page.layout == "micropubpost" %}
+
+      <div class="post-overview">
+
+        <div>
+
+          <img src="{{ page.img }}" alt="Headshot of {{ page.author }}">
+          
+        </div>
+
+        <div>
+
+          <ul>
+            <li><span class="visually-hidden">Posted by:</span> <a href="mailto:{{ page.email }}?Subject={{ page.title }}">{{ page.author }}</a>{% if page.role %}, {{ page.role }}{% endif %}</li>
+            <li><span class="visually-hidden">Posted:</span> {{ page.date | date: "%A, %B %e, %Y" }}</li>
+            {% if page.update %}
+            <li><span>Update:</span> {{ page.update | date: "%A, %B %e, %Y" }}</li>
+            {% endif %}
+          </ul>
+
+        </div>
+
+      </div>
+
+      {% endif %}
+
       {% endif %}
 
       {% endif %}
