--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,9 @@
 
           <ul>
             <li><span class="visually-hidden">Posted by:</span> <a href="mailto:{{ page.email }}?Subject={{ page.title }}">{{ page.author }}</a>{% if page.role %}, {{ page.role }}{% endif %}</li>
+            {% if page.pronouns %}
+            <li><span class="visually-hidden">Pronouns:</span> {{ page.pronouns }}</li>
+            {% endif %}
             <li><span class="visually-hidden">Posted:</span> {{ page.date | date: "%A, %B %e, %Y" }}</li>
             {% if page.update %}
             <li><span>Update:</span> {{ page.update | date: "%A, %B %e, %Y" }}</li>
