--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,8 +6,8 @@
             <li><a href="/a11y/">Accessibility at Radancy</a></li>
             <li><a href="/component-library/">Component Library</a></li>
             <li><a href="/magicbullet/">MagicBullet</a></li>
-            <li><a href="/blog/">Radancy DevBlog</a></li>
-            <li><a href="/uid/code-standards/" data-nav-id="rad-uid-code-standards-index">User Interface Standards and Guidelines</a></li>
+            <li><a href="/blog/" data-nav-id="rad-blog">Radancy DevBlog</a></li>
+            <li><a href="/uid/code-standards/" data-nav-id="rad-uid-code-standards">User Interface Standards and Guidelines</a></li>
           </ul>
 
         </li>
