--- a/css/init.scss
+++ b/css/init.scss
@@ -1012,9 +1012,9 @@ z-index: 2;
   }
 
   ul {
-  list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 1.6em;
+  list-style-type: disc;
   }
 
   a {
