--- a/css/init.scss
+++ b/css/init.scss
@@ -492,7 +492,7 @@ border-color: #9e4307;
 
 }
 
-.tab-accordion__button {
+.tab-accordion__button, .tablist__tab {
 
   .icon {
   display: inline-block;
