--- a/css/init.scss
+++ b/css/init.scss
@@ -996,6 +996,11 @@ z-index: 2;
     &[aria-current] {
     font-weight: bold;
     text-decoration: none;
+
+      img {
+      display: none;
+      }
+
     }
 
   }
