--- a/css/init.scss
+++ b/css/init.scss
@@ -508,7 +508,7 @@ border-color: #9e4307;
 
 }
 
-.experimental, .warning, .note {
+.experimental, .warning, .note, .reminder {
 border-left-width: em(4);
 border-left-style: solid;
 margin-top: em(16);
@@ -533,6 +533,11 @@ border-left-color: blue;
 .warning {
 background-color: pink;
 border-left-color: red;
+}
+
+.reminder {
+background-color: #f5cd01;
+border-color: orange;
 }
 
 .warning-info {
