--- a/css/init.scss
+++ b/css/init.scss
@@ -1082,6 +1082,7 @@ body:not(.component-library-disclosure) {
     &__select {
     background-color: #fff;
     border: 1px #767676 solid;
+    color: inherit;
     font-size: inherit;
     max-width: rem(420);
     padding: em(8);
