--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
     <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport">
     <meta content="noindex, nofollow" name="robots">
     <meta content="{{ site.theme-color }}" name="theme-color">{% if page.slick %}
-    <link href="{{ site.git-url }}/lib/a11y-slick-1.0.1/slick.min.css" rel="stylesheet">{% endif %}{% if page.in-page %}
+    <link href="{{ site.git-url }}/lib/a11y-slick-1.0.1/slick.min.css" rel="stylesheet">{% endif %}{% if page.accordion %}
+    <link href="{{ site.git-url }}/component-library/accordion/init.css" rel="stylesheet">{% endif %}{% if page.in-page %}
     <link href="{{ site.git-url }}/component-library/in-page/init.css" rel="stylesheet">{% endif %}{% if page.read-more %}
     <link href="{{ site.git-url }}/component-library/read-more/init.css" rel="stylesheet">{% endif %}{% if page.tabcordion %}
     <link href="{{ site.git-url }}/component-library/tabcordion/init.css" rel="stylesheet">{% endif %}{% if page.tablist %}
@@ -130,7 +131,8 @@
   </div>
   {% if page.jquery == true %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>{% endif %}{% if page.slick %}
-  <script src="{{ site.git-url }}/lib/a11y-slick-1.0.1/slick.min.js"></script>{% endif %}{% if page.disclosure %}
+  <script src="{{ site.git-url }}/lib/a11y-slick-1.0.1/slick.min.js"></script>{% endif %}{% if page.accordion %}
+  <script src="{{ site.git-url }}/component-library/accordion/init.js"></script>{% endif %}{% if page.disclosure %}
   <script src="{{ site.git-url }}/component-library/disclosure/init.js"></script>{% endif %}{% if page.in-page %}
   <script src="{{ site.git-url }}/component-library/in-page/init.js"></script>{% endif %}{% if page.read-more %}
   <script src="{{ site.git-url }}/component-library/read-more/init.js"></script>{% endif %}{% if page.tabcordion %}
