--- a/css/init.scss
+++ b/css/init.scss
@@ -664,79 +664,87 @@ transition: 300ms;
 
 .component-functions {
 margin: 2em 0;
-  
+      
   ul {
+  display: grid;
+  gap: .5em;
   list-style: none;
   margin: 0;
   padding: 0;
-
-    @media(min-width: em(680)) {
-
-      display: flex;
-      flex-wrap: wrap;
-      gap: .5em;
-
+  
+    li, form {
+    display: contents;
     }
-
+  
+    $breakpoint-large: 58.75em; 
+    $breakpoint-medium: 37.5em;
+    
+    @media (min-width: $breakpoint-medium) {
+  
+      grid-template-columns: repeat(2, 1fr);
+  
+    }
+  
+    @media (min-width: $breakpoint-large) {
+  
+      display: inline-grid;
+      grid-template-columns: repeat(6, 1fr); 
+  
+    }
+  
   }
-
+    
   a, button {
+  align-items: center;
   background-color: transparent;
-  border: calc(1rem / 16) solid #000;
+  border: calc(1rem/16) solid #000;
   color: #000;
   cursor: pointer;
-  display: flex;
-  font-size: rem(14);
-  line-height: 1.2;
-  margin-bottom: 0.5em;  
+  display: grid;
+  font-size: calc(14rem/16);
+  grid-template-columns: min-content auto; 
+  line-height: 1.2; 
   padding: 1.2em;
+  text-align: start;
   text-decoration: none;
-  width: 100%;
-
-    @media(min-width: em(680)) {
-
-      justify-content: center;
-      margin-bottom: 0;
-
-    }
-
+    
     &:hover, &:focus {
     text-decoration: underline;
     }
-
+    
     &:after {
     display: none;
     }
-
+    
     .icon {
-    display: inline-block;
+    display: block;
     line-height: 0;
-    margin-inline-end: em(11);
+    margin-inline-end: calc(11rem/16);
     }
-
+    
     svg {
-    height: rem(16);
-    width: rem(16);
+    height: 1rem;
+    width: 1rem;
     }
-
+    
     .icon-check {
     display: none;
     }
-
+    
     &.link-copied {
-
+    
       .icon-copy-url {
       display: none;
       }
-
+    
       .icon-check {
-      display: inline-block;
+      display: block;
       }
-
+    
     }
-
+    
   }
-
+    
 }
 
 .btn, input[type="file"]::file-selector-button {
