--- a/css/init.scss
+++ b/css/init.scss
@@ -283,7 +283,7 @@ font-size: rem(8);
 }
 
 table {
-width: 400%;
+width: 375%;
 border-collapse: collapse;
 margin: 0;
 
@@ -319,6 +319,13 @@ margin: 0;
   color: #fff;
   text-align: start;
   white-space: nowrap;
+
+    &[scope="row"] {
+    left: 0;
+    position: sticky;
+    z-index: 1;
+    }
+
   }
 
   td:first-child {
