--- a/css/init.scss
+++ b/css/init.scss
@@ -678,16 +678,13 @@ margin: 2em 0;
     display: contents;
     }
   
-    $breakpoint-large: 58.75em; 
-    $breakpoint-medium: 37.5em;
-    
-    @media (min-width: $breakpoint-medium) {
+    @media (min-width: 37.5em) {
   
       grid-template-columns: repeat(2, 1fr);
   
     }
   
-    @media (min-width: $breakpoint-large) {
+    @media (min-width: 58.75em) {
   
       display: inline-grid;
       grid-template-columns: repeat(6, 1fr); 
@@ -709,7 +706,7 @@ margin: 2em 0;
   padding: 1.2em;
   text-decoration: none;
 
-    @media (min-width: $breakpoint-medium) {
+    @media (min-width: 37.5em) {
   
       justify-content: center;
 
