--- a/css/init.scss
+++ b/css/init.scss
@@ -704,6 +704,7 @@ margin: 2em 0;
   grid-template-columns: min-content auto; 
   line-height: 1.2; 
   padding: 1.2em;
+  text-align: start;
   text-decoration: none;
 
     @media (min-width: 37.5em) {
