--- a/css/init.scss
+++ b/css/init.scss
@@ -1088,7 +1088,7 @@ border: calc(2rem/16) transparent solid;
 display: inline-block;
 font-weight: bold;
 line-height: normal;
-margin: 2em 0;
+margin: .2em 0;
 margin-inline-end: .5em;
 min-width: calc(100rem/16);
 padding: .5em;
