--- a/css/init.scss
+++ b/css/init.scss
@@ -1148,3 +1148,23 @@ text-align: center;
   margin: 0;
   padding: 0;
   }
+
+.btn-code-copy {
+background-color: transparent;
+border-radius: 2px;
+border: 1px #fff solid;
+cursor: pointer;
+height: calc(30rem / 16);
+inset-block-start: 2em;
+inset-inline-end: 2em;
+line-height: normal;
+position: absolute;
+width: calc(30rem / 16);
+
+  svg {
+  display: block;
+  fill: #fff;
+  }
+
+}
+
