--- a/css/init.scss
+++ b/css/init.scss
@@ -1166,5 +1166,21 @@ width: calc(30rem / 16);
   fill: #fff;
   }
 
+  .icon-check {
+  display: none;
+  }
+    
+  &.link-copied {
+    
+    .icon-copy-url {
+    display: none;
+    }
+    
+    .icon-check {
+    display: block;
+    }
+    
+  }
+    
 }
 
