--- a/css/init.scss
+++ b/css/init.scss
@@ -1170,7 +1170,7 @@ width: calc(30rem / 16);
   display: none;
   }
     
-  &.link-copied {
+  &.code-copied {
     
     .icon-copy-url {
     display: none;
