--- a/css/init.scss
+++ b/css/init.scss
@@ -1154,11 +1154,13 @@ background-color: transparent;
 border-radius: 2px;
 border: 1px #fff solid;
 cursor: pointer;
+display: block;
+float: inline-end;
 height: calc(30rem / 16);
-inset-block-start: 2em;
-inset-inline-end: 2em;
+inset-block-start: 1em;
+inset-inline-end: 1em;
 line-height: normal;
-position: absolute;
+position: sticky;
 width: calc(30rem / 16);
 
   svg {
