--- a/css/init.scss
+++ b/css/init.scss
@@ -142,6 +142,7 @@ white-space: nowrap;
 background-color: #333;
 color: #fff;
 margin: 2px;
+outline: 1px #fff solid;
 line-height: 2;
 font-weight: normal;
 
