--- a/css/init.scss
+++ b/css/init.scss
@@ -196,7 +196,11 @@ h1, h2, h3, h4, h5, h6, caption, table {
 font-family: "Campton", $fallback-font;
 font-weight: 400;
 line-height: normal;
-margin: em(16) 0 0;
+margin: em(16) 0;
+}
+
+.primary-heading {
+margin-block-end: 0;
 }
 
 h3 {
