--- a/css/init.scss
+++ b/css/init.scss
@@ -203,11 +203,7 @@ h1, h2, h3, h4, h5, h6, caption, table {
 font-family: "Campton", $fallback-font;
 font-weight: 400;
 line-height: normal;
-margin: em(16) 0;
-}
-
-.primary-heading {
-margin-block-end: 0;
+margin: em(16) 0 0;
 }
 
 h3 {
@@ -973,7 +969,7 @@ background-color: $highlight-color;
     }
   
     ul {
-    margin: 0;
+    margin: 1em 0;
     padding: 0 0 0 1.6em;
     list-style-type: disc;
     }
