--- a/css/init.scss
+++ b/css/init.scss
@@ -969,7 +969,7 @@ background-color: $highlight-color;
     }
   
     ul {
-    margin: 1em 0;
+    margin: 1em 0 0;
     padding: 0 0 0 1.6em;
     list-style-type: disc;
     }
