--- a/css/init.scss
+++ b/css/init.scss
@@ -1017,7 +1017,7 @@ padding-bottom: em(16);
 scrollbar-color: var(--scroll-color-thumb) var(--scroll-color-track);
 scrollbar-width: thin;
 
-  @supports #{'\selector(-::webkit-scrollbar)'} {
+  @supports #{"\selector(-::webkit-scrollbar)"} {
 
     scrollbar-color: initial;
     scrollbar-width: auto;
