--- a/css/init.scss
+++ b/css/init.scss
@@ -1030,7 +1030,7 @@ scrollbar-width: thin;
     }
 
     &::-webkit-scrollbar-track {
-    background-color: var(--scroll-color-track);
+    background-color: #d3d3d3;
     }
 
     &::-webkit-scrollbar-thumb {
