--- a/css/init.scss
+++ b/css/init.scss
@@ -204,6 +204,11 @@ font-family: "Campton", $fallback-font;
 font-weight: 400;
 line-height: normal;
 margin: em(16) 0;
+
+  + * {
+  margin-block-end: 0;
+  }
+
 }
 
 h3 {
@@ -356,10 +361,6 @@ margin: 0;
   
   }
 
-}
-
-p {
-margin: 0 0 1em;
 }
 
 video {
