--- a/css/init.scss
+++ b/css/init.scss
@@ -203,7 +203,7 @@ h1, h2, h3, h4, h5, h6, caption, table {
 font-family: "Campton", $fallback-font;
 font-weight: 400;
 line-height: normal;
-margin: em(16) 0;
+margin: 16px 0;
 }
 
 h3 {
