--- a/css/init.scss
+++ b/css/init.scss
@@ -319,7 +319,7 @@ margin: 0;
   background-color: $highlight-color;
   color: #fff;
   text-align: start;
-  // white-space: nowrap;
+  white-space: nowrap;
 
     /* &[scope="row"] {
     left: 0;
